some additions and improvements